# T2_Daemons

./: CMakeLists.txt  README.md  daemon.cpp  dummy  dummy.cpp  temp_log.txt  temp_monitor  temp_monitor.cpp
config/: temp_monitor.service
